--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dependencies": {
         "@tanstack/react-query": "^5.66.9",
         "antd": "^5.23.3",
+        "chart.js": "^4.4.9",
+        "react-chartjs-2": "^5.3.0",
         "react-google-recaptcha": "^3.1.0",
         "react-router-dom": "^7.1.1"
     }
